--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "dev-ip": "^1.0.1",
     "express": "^4.16.1",
+    "fontawesome": "^4.7.2",
     "nodemon": "^1.12.1",
     "rimraf": "^2.6.2",
     "socket.io": "^2.1.0"
