--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "klaw-sync": "^6.0.0",
     "pug": "^2.0.3",
     "semver": "^5.6.0",
+    "slash": "^2.0.0",
     "socket.io": "^2.1.0"
   },
   "presets": [
