--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs-extra": "^6.0.1",
     "json5": "^2.1.0",
     "klaw-sync": "^6.0.0",
+    "markdown-it": "^8.4.2",
     "pug": "^2.0.3",
     "semver": "^5.6.0",
     "slash": "^2.0.0",
