--- a/package.json
+++ b/package.json
@@ -19,14 +19,11 @@
     "chalk": "^2.4.0",
     "chokidar": "^1.7.0",
     "commander": "^2.16.0",
-    "cors": "^2.8.4",
-    "debug": "^3.1.0",
-    "dev-ip": "^1.0.1",
     "drafter": "^2.0.0-pre.1",
     "express": "^4.16.1",
     "fontawesome": "^4.7.2",
     "fs-extra": "^6.0.1",
-    "json5": "^2.1.0",
+    "highlight.js": "^9.13.1",
     "klaw-sync": "^6.0.0",
     "markdown-it": "^8.4.2",
     "pug": "^2.0.3",
