--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "markdown-it": "^8.4.2",
     "pug": "^2.0.3",
     "semver": "^5.6.0",
+    "serve-favicon": "^2.5.0",
     "slash": "^2.0.0",
     "socket.io": "^2.1.0"
   },
