--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "highlight.js": "^9.13.1",
     "klaw-sync": "^6.0.0",
     "markdown-it": "^8.4.2",
+    "markdown-it-anchor": "^5.0.2",
+    "markdown-it-checkbox": "^1.1.0",
+    "markdown-it-container": "^2.0.0",
+    "markdown-it-emoji": "^1.4.0",
     "pug": "^2.0.3",
     "semver": "^5.6.0",
     "serve-favicon": "^2.5.0",
