--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
   ],
   "dependencies": {
     "chalk": "^2.4.0",
-    "chokidar": "^1.7.0",
     "commander": "^2.16.0",
     "drafter": "^2.0.0-pre.1",
     "express": "^4.16.1",
-    "fs-extra": "^6.0.1",
     "highlight.js": "^9.13.1",
     "klaw-sync": "^6.0.0",
     "markdown-it": "^8.4.2",
@@ -29,11 +27,11 @@
     "markdown-it-checkbox": "^1.1.0",
     "markdown-it-container": "^2.0.0",
     "markdown-it-emoji": "^1.4.0",
+    "ora": "^3.0.0",
     "pug": "^2.0.3",
     "semver": "^5.6.0",
     "serve-favicon": "^2.5.0",
-    "slash": "^2.0.0",
-    "socket.io": "^2.1.0"
+    "slash": "^2.0.0"
   },
   "presets": [
     "env"
