update: git ignore example

--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "html",
     "mock"
   ],
+  "files": [
+    "bin",
+    "public",
+    "src"
+  ],
   "dependencies": {
     "chalk": "^2.4.0",
     "commander": "^2.16.0",
